# accelerator-modeling-chef

./: .cvsignore  .gitignore  BUILD.txt  CMakeLists.txt  COPYRIGHT  ChangeLog  Make-config  Makefile  Makefile.am  Makefile.in  README  RELEASENOTES  TODO  bootstrap  bootstrap.sh  chef-build.sh  chef-config.sh.in  configure  configure.in  create_includedir.sh  distclean.sh  distfile  run_all_tests.sh.in  setup_ironchef.csh  tar-exclude  test-build.sh  updateheaders  updateheaders.sh  updatesource  updatesource.sh
basic_toolkit/: CMakeLists.txt  License  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  header_files
basic_toolkit/config/: mkinstalldirs
basic_toolkit/include/: Barnacle.h  Cascade.h  ColorWheel.h  ConvolutionFunctor.h  ConvolutionFunctor.tcc  ConvolutionFunctorImpl.h  ConvolutionFunctorImpl.tcc  ConvolutionPolicies.h  ConvolutionPolicies.tcc  Distribution.h  ExpandingArray.h  FFTFunctor.h  FFTFunctor.tcc  FFTFunctorImpl.h  FFTFunctorImpl.tcc  FFTWAllocator.h  Frame.h  Frame.icc  GenericException.h  IntArray.h  IntArray.tcc  LineSearch.h  LookupTable.h  ML.h  MLPtr.h  MLPtr.tcc  MXBBML_bool.h  MathConstants.h  Matrix.h  MatrixFwd.h  NewtonSolver.h  OutputFormat.h  PhysicsConstants.h  QuasiNewtonSolver.h  RandomOrthogonal.h  ReferenceCounter.h  SVDFit.h  TML.h  TML.tcc  TMatrix.h  (+17 more)
basic_toolkit/src/: Barnacle.cc  BubbleSort.cc  CMakeLists.txt  Cascade.cc  ColorWheel.cc  ConvolutionFunctor.cc  Distribution.cc  ExpandingArray.cc  FFTFunctor.cc  Frame.cc  GenericException.cc  IntArray.cc  IntArrayInstantiations.cc  LineSearch.cc  LookupTable.cc  ML.cc  MLPtr.cc  Makefile  Makefile.am  Makefile.in  MathConstants.cc  Matrix.cc  Matrix_SVD.cc  NewtonSolver.cc  OutputFormat.cc  PhysicsConstants.cc  QuasiNewtonSolver.cc  RandomOrthogonal.cc  SVDFit.cc  TML.cc  TML_SVD.cc  TMatrix.cc  TMatrixInstantiations.cc  TMatrix_SVD.cc  TVector.cc  TemplateInstantiations.cc  Vector.cc  apstring.cc  binomcoeff_recursive.c  cg.c  (+18 more)
basic_toolkit/tests/: FrameTest.cc  FrameTest.sh  SVDFitTest.cc  SVDFitTest.sh  SVDTest.sh  eigenTest_1.cc  eigenTest_1.sh  eigenTest_2.cc  eigenTest_2.sh  eigenTest_3.cc  eigenTest_3.sh  makefile.local  nexcomTest.cc  nexcomTest.sh  orthogonalTest.sh  testDet_1.cc  testDet_1.sh  testDet_2.cc  testDet_2.sh  test_all.sh
beamline/: CMakeLists.txt  License  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  header_files
beamline/config/: acinclude.m4  beamline.m4  mkinstalldirs
beamline/demos/: CFTest.cc  ChromaticityAdjusterTest.cc  FODO_A.cc  FODO_E.cc  Makefile  MatrixCalcTest.cc  TuneAdjusterTest.cc  beamline_iterators.cc  boosterv6.cc  boosterv6.out  boosterv6.out.C  build_demos.csh  makefile.local  norm_A.cc  norm_A.out  norm_B.cc  norm_B.out  normalFormTest.cc  normalFormTest_3_16.out  normalFormTest_3_20.out  normalFormTest_3_8.out  sbendTest.cc  sbendTest.out  test-build.sh
beamline/include/: Alignment.h  AlignmentDecorator.h  Aperture.h  ApertureDecorator.h  BBLens.h  BBLens.tcc  BBLensPropagators.h  BasePropagator.h  BasePropagator.tcc  BeamlineExpressionTree.h  BeamlineIterator.h  BeamlinePropagators.h  Bend.h  BendPropagators.h  BipolarCircuit.h  BmlPtr.h  BmlPtrList.h  BmlVisitor.h  BmlnElmnt.h  BmlnElmnt.tcc  BunchPredicate.h  BunchProjector.h  CF_rbend.h  CF_rbendPropagators.h  CF_sbend.h  CF_sbendPropagators.h  CF_sbend_MADPropagator.h  CombinedFunctionPropagators.h  Cooler.h  DecapolePropagators.h  Dipedge.h  DipedgePropagators.h  Drift.h  DriftPropagators.h  Edge.h  EdgePropagators.h  EdwardsTeng.h  ElmPtr.h  FCircuit.h  FDPolarity.h  (+94 more)
beamline/src/: .cvsignore  AlignmentDecorator.cc  Aperture.cc  ApertureDecorator.cc  BBLens.cc  BBLensPropagators.cc  BasePropagator.cc  BeamlineExpressionTree.cc  BeamlineIterator.cc  BeamlinePropagators.cc  Bend.cc  BendPropagators.cc  BipolarCircuit.cc  BmlPtrList.cc  BmlVisitor.cc  BmlnElmnt.cc  BunchProjector.cc  CF_rbend.cc  CF_rbendConstructor.ins  CF_rbendPropagators.cc  CF_sbend.cc  CF_sbendConstructor.ins  CF_sbendPropagators.cc  CF_sbend_MADPropagator.cc  CMakeLists.txt  CombinedFunctionPropagators.cc  DecapolePropagators.cc  Dipedge.cc  DipedgePropagators.cc  Drift.cc  DriftPropagators.cc  Edge.cc  EdgePropagators.cc  EdwardsTeng.cc  FCircuit.cc  FPSolver.cc  FixedPoint.cc  FramePusher.cc  GkickPropagators.cc  ICircuit.cc  (+98 more)
beamline/tests/: SolenoidTest01.cc  SolenoidTest01.sh  bendTest_1.cc  bendTest_1.sh  bendTest_2.cc  bendTest_2.sh  insertionTest_1.cc  insertionTest_1.sh  insertionTest_2.cc  insertionTest_2.sh  makefile.local  test_6and8.cc  test_6and8.sh  test_all.sh
bmlfactory/: CMakeLists.txt  License  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  header_files
bmlfactory/config/: acinclude.m4  mkinstalldirs
bmlfactory/doc/: MAD-parser-slides.lyx  README  README.TOO  manual.tex
bmlfactory/include/: MAD8Factory.h  ParserException.h  beam_element.h  beam_line.h  beamel_table.h  bel_inst_fns.h  bml_table.h  bmlfactory.h  cfg_output.h  comment_arr.h  const_table.h  expression.h  fb_allocator.h  mad.tab.h  mad_interface_internals.h  mad_yacc.tab.h  madparser.h  madparser_types.h  matrix.h  pair.h  quatro.h  str_to_upper.h  troika.h  var_table.h
bmlfactory/src/: .cvsignore  .gitignore  CMakeLists.txt  MAD8Factory.cc  Makefile  Makefile.am  ParserException.cc  beam_element.c  beam_line.c  beamel_table.c  bel_inst_fns.c  bml_table.c  bmlfactory.cc  bmlfactory_exit.cc  cfg_output.c  comment_arr.c  const_table.c  expression.c  fb.c  fb_allocator.c  mad.c  mad.lex  mad.tab.c  mad.y  mad_interface_internals.c  mad_lex.l  mad_yacc.y  madparser.c  matrix.c  preparser.C  source_files  str_to_upper.c  tst-lex.c  var_table.c  (+1 more)
gms/: .cvsignore  CMakeLists.txt  Makefile.am  configure.in
integrator/: CMakeLists.txt  GNU_General_Public_License  Makefile  Makefile.am  configure.in  header_files
mxyzptlk/: CMakeLists.txt  License  Makefile.am  configure.in  header_files
physics_toolkit/: CMakeLists.txt  License  Makefile.am  configure.in  header_files
python-bindings/: CMakeLists.txt  Makefile.am  configure.in
(+1071 files in other folders)
