#--------------------------------------------------------------------
# configure.in for top level  
#
# Authors:  Jean-Francois Ostiguy
#           ostiguy@fnal.gov
#
#
# Process this file with autoconf to produce a configure script.
#
#-------------------------------------------------------------------
AC_INIT([fnal], [1.0])
AC_CONFIG_MACRO_DIR([m4]) 
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SUBDIRS(basic_toolkit beamline bmlfactory parsers integrator mxyzptlk physics_toolkit gms python-bindings)

AM_INIT_AUTOMAKE

LT_INIT

AC_CONFIG_FILES(Makefile)
AC_OUTPUT(tests/Makefile tests/local_paths.py)

