# Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SUBDIRS(basic_toolkit beamline bmlfactory parsers integrator mxyzptlk physics_toolkit gms python-bindings)

AM_INIT_AUTOMAKE(fnal, 1.0, no-define)

AC_ARG_VAR([GLIB_INC],    [GLIB include directory])dnl
AC_SUBST(GLIB_INC)
AC_ARG_VAR([GLIBCONFIG_INC],    [GLIB configuration include directory])dnl
AC_SUBST(GLIBCONFIG_INC)
AC_ARG_VAR([GLIB_LIB],    [GLIB library directory])dnl
AC_SUBST(GLIB_LIB)

AC_CONFIG_FILES([Makefile chef-config.sh run_all_tests.sh])
AC_OUTPUT(tests/Makefile tests/local_paths.py)

