#--------------------------------------------------------------------
# configure.in for bmlfactory
#
# Authors:  Enrico Ng (Summer Intern) 
#
#           Jean-Francois Ostiguy
#           ostiguy@fnal.gov
#
# Process this file with autoconf to produce a configure script.
#
#-------------------------------------------------------------------

AC_INIT(src/beam_element.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(bmlfactory, 1.0, no-define)

AC_ARG_WITH(cxx,AC_HELP_STRING([--with-cxx=CXX],[CXX = your compiler; g++=GNU Compiler (default), CC=Sun Compiler, pgCC=PGI compiler]),
if test "x${withval}" != "xno"; then
CXX=${withval}
fi)

AC_ARG_WITH(cc,AC_HELP_STRING([--with-cc=CC],[CC = your compiler; gcc=GNU Compiler (default), cc=Sun Compiler]),
if test "x${withval}" != "xno"; then
CC=${withval}
fi)

if test ${CXXFLAGS} && test ${CFLAGS}; then
set_CXXFLAGS=${CXXFLAGS}
set_CFLAGS=${CFLAGS}
fi

# Checks for programs.
AC_PROG_CXX(g++ CC)
AC_PROG_CC(gcc cc)
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug],[Debugging. Turns off Optimization]),
if test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="${CFLAGS} -g -pipe -fexceptions -std=gnu89"
   CXXFLAGS"=${CXXFLAGS} -g -O2 -pipe -fpermissive -Wno-deprecated"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS==${CXXFLAGS} "-instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS="-g"
     AM_CXXFLAGS="--prelink_objects"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi,
if test "x${GXX}" = "xyes" || test "x${GCC}" = "xyes"; then
   CFLAGS="${CFLAGS} -g -O2 -pipe -fexceptions -std=gnu89"
   CXXFLAGS="${CXXFLAGS} -g -O2 -pipe -fpermissive -Wno-deprecated"
   AC_SUBST(CFLAGS)
   AC_SUBST(CXXFLAGS)
elif test "x${CXX}" = "xCC"; then
     CXXFLAGS=${CXXFLAGS} "-fast -instances=global"
     LDFLAGS="-Xlinker -zmuldefs"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(LDFLAGS)
elif test "x${CXX}" = "xpgCC"; then
     CXXFLAGS=${CXXFLAGS} "-g -fast"
     AM_CPPFLAGS="--prelink_objects -Wc -tused"
     AC_SUBST(CXXFLAGS)
     AC_SUBST(AM_CPPFLAGS)
fi
)

AC_ARG_WITH(gxx_rtti,AC_HELP_STRING([--with-gxx_rtti],[Enable G++ rtti]),,
if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
CXXFLAGS="${CXXFLAGS}"
AC_SUBST(CXXFLAGS)
AC_DEFINE(NO_RTTI,,nortti)
fi
)
#AC_ARG_WITH(gxx_exception,AC_HELP_STRING([--with-gxx_exception],[Enable G++ exceptions]),,
#if test "x${GXX}" = "xyes" && test "x$set_CXXFLAGS" = "x"; then
#CXXFLAGS="-fno-exceptions ${CXXFLAGS}"
#AC_SUBST(CXXFLAGS)
#fi
#)

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS([malloc.h stddef.h stdlib.h string.h unistd.h])
AC_ARG_VAR([GLIB_INC],    [GLIB include directory])dnl
AC_CHECK_HEADER(glib.h,,[
if test ${GLIB_INC} && test -r ${GLIB_INC}; then
        AC_SUBST(GLIB_INC)
        AC_MSG_RESULT([Location specified: ${GLIB_INC}])
else
# Try to guess the location based on the location of gcc 
        glib_inc=`which gcc | sed "s#bin\/gcc#include\/glib-2.0#"`
        if test -r $glib_inc/glib.h; then
                GLIB_INC=$glib_inc
                AC_SUBST(GLIB_INC)
                AC_MSG_RESULT([Header file located in $GLIB_INC])
        else
		if test -r /usr/local/ap/include/glib-2.0/glib.h; then
		    GLIB_INC="/usr/local/ap/include/glib-2.0"
		    AC_SUBST(GLIB_INC)
		    AC_MSG_RESULT([Header file located in $GLIB_INC])
		elif test -r /usr/local/ap/include/glib-1.2/glib.h; then
		    GLIB_INC="/usr/local/ap/include/glib-1.2"
		    AC_SUBST(GLIB_INC)
		    AC_MSG_RESULT([Header file located in $GLIB_INC])
		elif test -r /usr/include/glib-2.0/glib.h; then
	            GLIB_INC="/usr/include/glib-2.0"
		    AC_SUBST(GLIB_INC)
		    AC_MSG_RESULT([Header file located in $GLIB_INC])
		elif test -r /usr/local/include/glib-2.0/glib.h; then
	            GLIB_INC="/usr/local/include/glib-2.0"
		    AC_SUBST(GLIB_INC)
		    AC_MSG_RESULT([Header file located in $GLIB_INC])
		elif test -r /usr/include/glib-1.2/glib.h; then
	            GLIB_INC="/usr/include/glib-1.2"
		    AC_SUBST(GLIB_INC)
		    AC_MSG_RESULT([Header file located in $GLIB_INC])
		elif test -r /usr/local/include/glib-1.2/glib.h; then
		    GLIB_INC="/usr/local/include/glib-1.2"
		    AC_SUBST(GLIB_INC)
		    AC_MSG_RESULT([Header file located in $GLIB_INC])
                else
		AC_MSG_ERROR([GLIB includes not found, please define GLIB_INC.]);
		fi
	fi
fi
])

AC_CHECK_HEADER(glibconfig.h,,[
if test ${GLIBCONFIG_INC} && test -r ${GLIBCONFIG_INC}; then
        AC_SUBST(GLIBCONFIG_INC)
        AC_MSG_RESULT([Location specified: ${GLIBCONFIG_INC}])
else
# Try to guess the location based on the location of gcc
        glibconfig_inc=`which gcc | sed "s#bin\/gcc#lib\/glib-2.0\/include#"`
        if test -r $glibconfig_inc/glibconfig.h; then
                GLIBCONFIG_INC=$glibconfig_inc
                AC_SUBST(GLIBCONFIG_INC)
                AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
        else
		if test -r /usr/lib/glib-2.0/include/glibconfig.h; then
		    GLIBCONFIG_INC="/usr/lib/glib-2.0/include"
		    AC_SUBST(GLIBCONFIG_INC)
		    AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
		elif test -r /usr/local/lib/glib-2.0/include/glibconfig.h; then
		    GLIBCONFIG_INC="/usr/local/lib/glib-2.0/include"
		    AC_SUBST(GLIBCONFIG_INC)
		    AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
		elif test -r /usr/local/ap/lib/glib-2.0/include/glibconfig.h; then
		    GLIBCONFIG_INC="/usr/local/ap/lib/glib-2.0/include"
		    AC_SUBST(GLIBCONFIG_INC)
		    AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
		elif test -r /usr/lib/glib-1.2/include/glibconfig.h; then
		    GLIBCONFIG_INC="/usr/lib/glib-1.2/include"
		    AC_SUBST(GLIBCONFIG_INC)
		    AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
		elif test -r /usr/local/lib/glib-1.2/include/glibconfig.h; then
		    GLIBCONFIG_INC="/usr/local/lib/glib-1.2/include"
		    AC_SUBST(GLIBCONFIG_INC)
		    AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
		elif test -r /usr/local/ap/lib/glib-1.2/include/glibconfig.h; then
		    GLIBCONFIG_INC="/usr/local/ap/lib/glib-1.2/include"
		    AC_SUBST(GLIBCONFIG_INC)
		    AC_MSG_RESULT([Header file located in $GLIBCONFIG_INC])
		else
                AC_MSG_ERROR([GLIBCONFIG include not found, please define GLIBCONFIG_INC.]);
		fi
	fi
fi
])

AC_ARG_VAR([BOOST_INC],    [BOOST include directory])dnl
AC_CHECK_HEADER(shared_ptr.hpp,,[
if test ${BOOST_INC} && test -r ${BOOST_INC}; then
        AC_SUBST(BOOST_INC)
        AC_MSG_RESULT([Location specified: ${BOOST_INC}])
else
# Try to guess the location based on the location of gcc 
        boost_inc=`which gcc | sed "s#bin\/gcc#include#"`
        if test -r $boost_inc/boost/shared_ptr.hpp; then
                BOOST_INC=$boost_inc
                AC_SUBST(BOOST_INC)
                AC_MSG_RESULT([Header file located in $BOOST_INC])
        else
		if test -r /usr/include/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/include"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/include/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/include"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/include/boost-1_32/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/include/boost-1_32"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
		elif test -r /usr/local/ap/include/boost-1_32/boost/shared_ptr.hpp; then
		    BOOST_INC="/usr/local/ap/include/boost-1_32"
		    AC_SUBST(BOOST_INC)
		    AC_MSG_RESULT([Header file located in $BOOST_INC])
                else
		AC_MSG_ERROR([BOOST includes not found, please define BOOST_INC.]);
		fi
	fi
fi
])


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([memset pow sqrt strcasecmp strchr strstr])

AM_LFLAGS="-B -8"
AC_SUBST(AM_LFLAGS)

AC_ARG_ENABLE(private-allocator,AC_HELP_STRING([--disable-private-allocator],[Use malloc and free instead]),
AC_DEFINE(malloc,allocate_block__,allocate)
AC_DEFINE(free,deallocate__,deallocate),
AC_DEFINE(PRIVATE_ALLOCATE,allocate_block__,allocate)
AC_DEFINE(PRIVATE_DEALLOCATE,deallocate__,deallocate))
if test "x$CXX" = "xpgCC"; then
	enable_shared=yes
fi

if test "$enable_shared" = yes; then
   AM_CONDITIONAL(SHARED_LIB,true)
else
   AM_CONDITIONAL(SHARED_LIB,false)
fi


AC_CONFIG_FILES([src/Makefile Makefile])
AC_OUTPUT
